@@ -20,6 +20,7 @@
 package org.neo4j.cypher.internal.pipes
 
 import org.neo4j.cypher.internal.symbols.SymbolTable
+import org.neo4j.cypher.PlanDescription
 
 class EmptyResultPipe(source: Pipe)
   extends PipeWithSource(source) {
@@ -33,7 +34,7 @@ class EmptyResultPipe(source: Pipe)
     Iterator()
   }
 
-  override def executionPlan(): String = source.executionPlan() + "\nEmptyResult()"
+  override def executionPlanDescription = source.executionPlanDescription.andThen("EmptyResult")
 
   def dependencies = Seq()
 
