@@ -21,6 +21,7 @@ package org.neo4j.cypher.internal.pipes
 
 import org.neo4j.cypher.internal.symbols._
 import org.neo4j.cypher.internal.commands.expressions.Expression
+import org.neo4j.cypher.PlanDescription
 
 class ExtractPipe(source: Pipe, val expressions: Map[String, Expression]) extends PipeWithSource(source) {
   val symbols: SymbolTable = {
@@ -39,9 +40,11 @@ class ExtractPipe(source: Pipe, val expressions: Map[String, Expression]) extend
     subgraph
   })
 
-  override def executionPlan(): String = source.executionPlan() + "\r\nExtract([" + source.symbols.keys.mkString(",") + "] => [" + expressions.keys.mkString(", ") + "])"
+  override def executionPlanDescription =
+    source.executionPlanDescription
+      .andThen("Extract", "symKeys" -> source.symbols.keys, "exprKeys" -> expressions.keys)
 
-  def throwIfSymbolsMissing(symbols: SymbolTable) {
+  override def throwIfSymbolsMissing(symbols: SymbolTable) {
     expressions.foreach(_._2.throwIfSymbolsMissing(symbols))
   }
 }
